# saas-general-procurement

./: .env  .gitignore  .replit  DEVELOPMENT_GUIDELINES.md  Dockerfile  Instructions.md  complete-workflow-test.js  comprehensive-field-test.js  comprehensive-fix-plan.md  comprehensive-role-test.js  final-test-report.md  mock_vendor_responses.json  package-lock.json  package.json  package.json.validation  populate-dropdowns.js  pyproject.toml  replit.md  run_django.py  supervisord.conf  temp_routes_start.ts  test-data-setup.js  test_auction_simple.html  test_dialog.html  test_django_api.py  test_dropdown_api.js  validate-system.sh  vite.config.ts
.replit-hooks/: pre-commit
attached_assets/: Pasted--Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-dev-1754919799455_1754919799457.txt  Pasted--Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-dev-1754972458039_1754972458039.txt  Pasted--Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-dev-1754972644571_1754972644572.txt  Pasted--Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-dev-1755623303298_1755623303299.txt  Pasted--Download-the-React-DevTools-for-a-better-development-experience-https-reactjs-org-link-react-dev-1755623471032_1755623471032.txt  Pasted-chunk-RPCDYKBN-js-v-5e2aa6fc-21551-Download-the-React-DevTools-for-a-better-development-experience--1755611788277_1755611788278.txt  SCLEN_General_Procurement_BRD_V0.3_1752048270414.docx  (+4 more)
(+202 files in other folders)
